<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/expandcollapse"
        android:tag="expandcollapse"
        android:paddingTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:src="@drawable/expand"
        android:text="@string/back"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/back"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/laptop"
        android:tag="laptop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:listSelector="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:layout_toRightOf="@+id/expandcollapse"
        android:layout_alignBaseline="@+id/expandcollapse"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/bracket_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracket_one_group"
        android:layout_toRightOf="@+id/laptop"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:id="@+id/quotes_size"
        android:tag="quotes_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bracket_one"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/bracket_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracket_two_group"
        android:layout_toRightOf="@+id/quotes_size"/>
</RelativeLayout>
