<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="left"
    android:layout_gravity="left"
    android:focusable="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/expandcollapse"
        android:paddingTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:src="@drawable/expand"
        android:text="@string/back"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/back"/>
    <TextView
        android:textColor="@android:color/black"
        android:gravity="center"
        android:id="@+id/child"
        android:tag="child"
        android:background="@android:color/transparent"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:listSelector="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_toRightOf="@+id/expandcollapse"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/bracket_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracket_one_child"
        android:layout_toRightOf="@+id/child"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@drawable/row_color_underline_selected"
        android:id="@+id/quotes_size_child"
        android:tag="quotes_size_child"
        android:background="@drawable/xml_underline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bracket_one"
        android:layout_alignBaseline="@+id/child"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/bracket_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracket_two_child"
        android:layout_toRightOf="@+id/quotes_size_child"/>
</RelativeLayout>
