<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="fill"
    android:id="@+id/screen"
    android:background="@drawable/table_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/back"
        android:tag="back"
        android:background="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/tools"/>
    <ImageView
        android:id="@+id/help"
        android:tag="help"
        android:background="@drawable/help"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/back"
        android:layout_centerVertical="true"
        android:contentDescription="@string/tools"/>
    <ImageView
        android:id="@+id/textsizeless"
        android:tag="less"
        android:background="@drawable/zoomless"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/help"
        android:layout_centerVertical="true"
        android:contentDescription="@string/tools"/>
    <ImageView
        android:gravity="center"
        android:id="@+id/textsizemore"
        android:tag="more"
        android:background="@drawable/zoommore"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textsizeless"
        android:layout_centerVertical="true"
        android:contentDescription="@string/tools"/>
    <ImageView
        android:id="@+id/textfont"
        android:tag="textfont"
        android:background="@drawable/textfont"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/textsizemore"
        android:layout_centerVertical="true"
        android:contentDescription="@string/tools"/>
    <ImageView
        android:id="@+id/button_back"
        android:tag="button_back"
        android:background="@drawable/ic_menu_back_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_toRightOf="@+id/textfont"
        android:layout_centerVertical="true"
        android:contentDescription="@string/back"/>
    <ImageView
        android:id="@+id/button_forward"
        android:tag="button_forward"
        android:background="@drawable/ic_menu_forward_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:layout_toRightOf="@+id/button_back"
        android:layout_centerVertical="true"
        android:contentDescription="@string/forward"/>
    <ImageView
        android:id="@+id/button_back_landscape"
        android:tag="button_back_landscape"
        android:background="@drawable/ic_menu_back_2"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_toLeftOf="@+id/center"
        android:layout_centerVertical="true"
        android:contentDescription="@string/back"/>
    <TextView
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <ImageView
        android:id="@+id/button_forward_landscape"
        android:tag="button_forward_landscape"
        android:background="@drawable/ic_menu_forward_2"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:layout_toRightOf="@+id/center"
        android:layout_centerVertical="true"
        android:contentDescription="@string/forward"/>
    <EditText
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:id="@+id/edit"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:maxLength="3"
        android:layout_toLeftOf="@+id/on"
        android:layout_centerVertical="true"
        android:inputType="numberDecimal"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:id="@+id/on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/go"
        android:layout_alignBaseline="@+id/number"
        android:layout_centerVertical="true"/>
    <ImageView
        android:id="@+id/go"
        android:tag="go"
        android:background="@drawable/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="@string/forward"
        android:layout_toLeftOf="@+id/number"
        android:layout_centerVertical="true"
        android:contentDescription="@string/forward"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>
